[metadata]
name = example-pkg-PhilippG
version = 0.0.1
author = PhilippG
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PhilippGsmaXtec/sampleproject
project_urls =
    Bug Tracker = https://github.com/PhilippGsmaXtec/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.4

[options.packages.find]
where = src